# Haskell-DragonNaturallySpeaking

./: .gitignore  Depends.hs  Events.hs  Example.hs  Main.hs  Makefile  Map.hs  Native.hs  README.md  TODO  actor.h  actor.m  commands.cabal  dependencies.sh  depends.sh  events.h  events.m  main.m  map.sh  notes
sources/: Bits.hs  Commands.hs  Etc.hs
sources/Commands/: Bits.hs  Etc.hs  Generic.hs  Grammar.hs  Instances.hs  Munging.hs  Parse.hs  Parsers.hs  Recognize.hs  Syntax.hs  TH.hs  Types.hs
sources/Commands/Generic/: Instances.hs
sources/Commands/OSX/: Bridge.hs  Constants.hs  Marshall.hs  Types.hs
sources/Commands/Parse/: Instances.hs
sources/Commands/Rule/: Types.hs
sources/Commands/TH/: Data.hs  Syntax.hs
sources/Commands/TH/Instance/: Grammar.hs  Parse.hs  Recognize.hs
sources/Commands/Text/: Parsec.hs
sources/Control/Monad/: NonEmpty.hs
sources/Example/: Commands.hs  Types.hs
sources/Example/Commands/: Syntax.hs
tests/: Tests.hs
