-- http://haskell.org/cabal/users-guide/

-- $ cabal sandbox init                  # initialise the sandbox
-- $ cabal install --only-dependencies   # install dependencies into the sandbox
-- $ cabal build                         # build your package inside the sandbox

-- $ cabal run 1 2 3
-- # passes "1" "2" "3" to the file in `main-is` under `executable`

-- $ cabal repl
-- # loads modules in `exposed-modules` under `library` (into ghci)
-- Commands>
-- Commands> :set -XOverloadedStrings

-- $ cabal install --enable-tests
-- $ cabal configure --enable-tests
-- $ cabal build && cabal test
-- # runs tests in the `main` function in the file in `main-is` under `test-suite`

-- $ cabal haddock && open dist/doc/html/commands/index.html
-- .cabal-sandbox/share/doc/$COMPILER/$PACKAGE-VERSION/html/$MODULE

-- # ls dist/build/
-- # rm -fr dist/


-- The name of the package.
name: commands

-- http://semver.org/
--       +--------- breaking API changes
--       | +----- non-breaking API additions
--       | | +--- code changes with no API change
version: 0.0.0

-- a short description, shows up in the search result from hackage
synopsis:
-- a longer description
description:

homepage: https://github.com/sboosali/Haskell-DragonNaturallySpeaking

license: GPL-3
license-file: LICENSE

author: Sam Boosalis
maintainer: samboosalis@gmail.com

category:

build-type: Simple

-- extra files to be distributed with the package
extra-source-files:
 README.md

-- extra files to be distributed with the package
-- access with:
--  getDataFileName :: FilePath -> IO FilePath
--  file <- getDataFileName "data/file.txt"
--  data <- readFile file
data-files:

-- constraint on the version of Cabal needed to build this package
cabal-version:       >=1.10


library

  -- directories with source files
  hs-source-dirs: sources

  -- modules exported by the library
  exposed-modules:

   Commands.Etc,
   Control.Monad.NonEmpty,
   Commands.Text.Parsec,

   Commands.Types,

   Commands.Munging,

   Commands.Generic,
   Commands.Generic.Instances,

   Commands.OSX.Constants,
   Commands.OSX.Bridge,
   Commands.OSX.Marshall,

   Commands.TH,
   Commands.TH.Syntax,
   Commands.TH.Data,
   Commands.TH.Instance.Parse,
   Commands.TH.Instance.Recognize,
   Commands.TH.Instance.Grammar,

   Commands.Rule.Types,

   Commands.Parse,
   Commands.Parse.Instances,

   Commands.Recognize,

   Commands.Grammar,

   Commands

  -- modules included in this library, but not exported
  other-modules:

  -- base language which the package is written in
  default-language: Haskell2010

  ghc-options:
   -Wall

   -fwarn-incomplete-patterns
   -fwarn-incomplete-uni-patterns

   -fno-warn-name-shadowing

  -- other library packages from which modules are imported
  build-depends:
   -- happy, alex, -- (cabal doesn't install executables before dependents? well it fixed my setup bug)
   safe,
   system-filepath,
   split,
   parsec ==3.1.*,
   data-default,
   bv,
   uu-parsinglib,
   generic-deriving,
   MissingH,
   transformers,
   uniplate,
   lens,
   semigroups,
   interpolatedstring-perl6,
   exceptions,
   th-lift,

   language-c-quote,
   language-c-inline,

   containers,
   template-haskell,
   base ==4.7.*

test-suite tests
  main-is:        Tests.hs
  hs-source-dirs: tests

  -- cabal will say the tests pass only if `main-is` exits with zero
  type: exitcode-stdio-1.0

  default-language: Haskell2010
  ghc-options:

  build-depends:
   commands,
   bv,

   QuickCheck, HUnit,
   test-framework, test-framework-quickcheck2, test-framework-hunit,
   test-framework-th,

   base ==4.7.*

